fixed z-index

--- a/public/style.css
+++ b/public/style.css
@@ -318,7 +318,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 2;
+  z-index: 888;
 }
 
 #rp-comparison-modal {
